WexGit/Wex_DX/force-app/main/default/objects/CP_Forecast_vs_Actuals__c/CP_Forecast_vs_Actuals__c.object-meta.xml
<CustomObject>
    <label>CP Forecast vs Actuals</label>
    <nameField>
        <displayFormat>CFA - {MM}-{YYYY} - {000000}</displayFormat>
        <label>CP Forecast vs Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Forecast vs Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>