WexGit/Wex_DX/force-app/main/default/objects/CP_Forecast_vs_Actuals__c/fields/Account_Asset__c.field-meta.xml
<CustomField>
    <fullName>Account_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Asset</label>
    <referenceTo>Account_Asset__c</referenceTo>
    <relationshipLabel>CP Forecast vs Actuals</relationshipLabel>
    <relationshipName>CP_Forecast_vs_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>