WexGit/Wex_DX/force-app/main/default/objects/CP_Forecast_vs_Actuals__c/fields/Actual_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Revenue__c</fullName>
    <label>Actual Monthly Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>