WexGit/Wex_DX/force-app/main/default/objects/CP_Forecast_vs_Actuals__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CP Forecast vs Actuals</relationshipLabel>
    <relationshipName>CP_Forecast_vs_Actuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>