WexGit/Wex_DX/force-app/main/default/objects/CP_Forecast_vs_Actuals__c/fields/Weighted_Forecast_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Forecast_Monthly_Revenue__c</fullName>
    <formula>(Forecast_Monthly_Revenue__c * Opportunity__r.Probability)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Forecast Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>